--- a/css/screen.css
+++ b/css/screen.css
@@ -2,10 +2,11 @@
 
 /* Base Styles */
 
+
 /* Bold on headings, b, and strong 
 h1,h2,h3,h4,h5,h6,b,strong { font-weight: bold; } 
 
-/* Italic on i, em, and cite: 
+/* Italic on i, em, and cite:
 i,em,cite { font-style: italic; }
 
 /* Dotted border and help cursor to abbr and acronym: 
@@ -31,6 +32,8 @@ div#page {
 
 /* Header */
 div#header {
+width: 43.94%;
+float: left;
 }
 div#header h1 {
 }
@@ -39,6 +42,13 @@ div#header h1 a {
 div#header p.tagline {
 }
 div#header ul.accessibility {
+}
+
+/*Sidebar, about me brief*/
+#sidebar {
+position: relative;
+float: left;
+width: 37.5%
 }
 
 /* Content */
@@ -63,12 +73,23 @@ div#footer ul.validators li {
 
 /*Navigation*/
 ul#navigation {
+width: ;
+float: left;
+margin: 0 10px;
 }
 
 ul#navigation li {
 }
 
+.about, .work, .home, .connect {
+font-size: 24px;
+background-color: green;
+width: ?;
+float: left;
+}
+
 ul#navigation li a {
+
 }
 
 ul#navigation li a:visited {
