--- a/css/screen.css
+++ b/css/screen.css
@@ -40,6 +40,16 @@ body {
 div#page {
 }
 
+
+/* Banner */
+div#banner {
+position:absolute;
+width: 100%;
+float: left;
+background-color: #4f4b4d;
+}
+
+
 /* Header */
 div#header {
 position: relative;
