--- a/css/screen.css
+++ b/css/screen.css
@@ -49,7 +49,7 @@ div#header {
 position: relative;
 width: 43.94%;
 float: left;
-background-color: red;
+background-color: #D0CAB4;
 }
 
 div#header img {
