added additional shortworks sections no content

--- a/css/screen.css
+++ b/css/screen.css
@@ -66,7 +66,7 @@ div#sidebar {
 position: absolute;   
 left: 0px; 
 width: 27.5%;
-margin: 250px 20px 0px 30px;
+margin: 350px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
 background-color: #D0C8B4;
 }
@@ -77,13 +77,15 @@ position: relative;
 float:left;
 width: 52.5%;
 background-color: red;
-margin: 100px 10px 0px 0px;
+margin: 170px 10px 0px 0px;
 }
 
 div.shortworks {
 float: left;
 background: #D0C8B4;
-padding: 15px 15px 150px 20px;
+width: 45%;
+padding: 15px 15px 50px 20px;
+margin: 15px;
 }
 
 /*Navigation*/
