--- a/css/screen.css
+++ b/css/screen.css
@@ -63,6 +63,59 @@ padding: 15px 15px 400px 20px;
 background-color: #D0C8B4;
 }
 
+.circle-1 {
+width: 6%;
+background: orange;
+padding: 80px;
+border-radius: 100px;
+float: left;
+margin: 5px;
+}
+
+.square-1 {
+width: 6%;
+background: blue;
+padding: 80px;
+border-radius: 20px;
+float: left;
+margin: 5px;
+}
+
+.circle-2 {
+width: 6%;
+background: yellow;
+padding: 80px;
+border-radius: 100px;
+float: left;
+margin: 5px;
+}
+
+.square-2 {
+width: 6%;
+background: green;
+padding: 80px;
+border-radius: 20px;
+float: left;
+}
+
+.circle-3 {
+background: pink;
+padding: 80px;
+border-radius: 100px;
+float: left;
+}
+
+.square-3 {
+width: 6%;
+background: grey;
+padding: 80px;
+border-radius: 20px;
+float: left;
+}
+
+
+
+
 /* Content */
 div#content {
 position: relative;
