added skillshapes container and css

--- a/css/screen.css
+++ b/css/screen.css
@@ -60,9 +60,13 @@ left: 0px;
 width: 27.5%;
 margin: 350px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
-background-color: #D0C8B4;
+/*background-color: #D0C8B4;*/
 }
 
+div#skillshapes {
+background: black;
+margin-top: 30px;
+}
 .circle-1 {
 width: 6%;
 background: orange;
@@ -99,6 +103,7 @@ float: left;
 }
 
 .circle-3 {
+width: 6%;
 background: pink;
 padding: 80px;
 border-radius: 100px;
