--- a/css/screen.css
+++ b/css/screen.css
@@ -36,7 +36,7 @@ background-color: #FCF7E6;
 div#page {
 margin: auto;
 padding: 0 1em;
-max-width: 80.75em; /* 1292 / 16px= 80.75%*/
+/* max-width: 80.75em; /* 1292 / 16px= 80.75%*/
 
 }
 
@@ -113,10 +113,10 @@ border-bottom-right-radius: 15px;
 
 /*Sidebar, about me brief*/
 div#sidebar {
-/* position: absolute;  */ 
-left: 0px; 
-width: 27.5%;
-margin: 200px 20px 0px 30px;
+position: absolute; 
+/* left: 0px; 
+width: 23.84%;   /*  308 / 1292 = .23839 */
+/* margin: 200px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
 /*background-color: #D0C8B4;*/
 }
@@ -124,7 +124,7 @@ padding: 15px 15px 400px 20px;
 p.blurb {
 font-size: 20px;
 color: #3D3348;
-font-weight: 600;
+font-weight: bold;
 }
 
 div#skillshapes {
@@ -134,7 +134,7 @@ margin-top: 30px;
 
 div#skillshapes p {
 font-family: Georgia, sans-serif;
-font-weight: 600;
+font-weight: bold;
 }
 
 .circle-1 {
@@ -198,36 +198,37 @@ border-radius: -100px;
 
 div#content-body {
 float: left;
-padding-left: 30px;
+/* padding-left: 30px;  */
 }
 
 /* Introductory Large text */
 div#big-blurb {
 float: left;
-padding: 20px 400px 0px 80px;
+/*padding: 20px 400px 0px 80px; */
 }
 
 div#big-blurb p {
-font-size: 4.5em;   /*   72 / 16 =   */
+font-size: 4.3em;   /*   approx 72 / 16 =   */
 font-family: Impact, "Arial Black", "Myriad Pro", Arial, serif;
 color: #7E92A9;
-font-weight: 600;
+font-weight: bold;
+margin-left:  12.69%;    /*    164 / 1292= .1269    */
 }
 
 div#content {
-position: relative;
-float:left;
-width: 50%;
-/* background-color: red; */
-margin: 170px 10px 0px 0px;
+/* position: relative;  */
+float: left;
+width: 43.65%; /*  564 / 1292 = .4365  */
+background-color: red; 
+/*  margin: 170px 10px 0px 0px;  */
 }
 
 
 div.shortworks {
 float: left;
 /* background: #BEB698; */
-width: 55%;
-padding: 15px 15px 50px 20px;
+width: 43.65%; /*  564 / 1292 = .4365  */
+/* padding: 15px 15px 50px 20px; */
 margin: 15px;
 margin-bottom: 40px;
 border-radius: 30px;
@@ -236,9 +237,9 @@ border-radius: 30px;
 
 div.shortworks h3 {
 border-top: 10px solid green;
-font-weight: 600;
+font-weight: bold;
 float: left;
-margin-right: 30px;
+/*margin-right: 30px; */
 }
 
 div.shortworks img {
