--- a/css/screen.css
+++ b/css/screen.css
@@ -116,12 +116,12 @@ border-bottom-right-radius: 15px;
 div#sidebar {
 display: inline;
 /* position: absolute; */
-left: 0px; 
-width: 23.84%;   /*  308 / 1292 = .23839 */
+/*left: 0px; 
+width: 23.84%;     308 / 1292 = .23839 */
 /* margin: 200px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
-/*background-color: #D0C8B4;*/
-margin-top: 
+/*background-color: #D0C8B4;
+margin-top: */
 }
 
 p.blurb {
