--- a/css/screen.css
+++ b/css/screen.css
@@ -205,7 +205,7 @@ margin-left: 1.54%;   /* 20/1292= .015479 */
 .square-2 {
 width: 6%;
 background: #203042;
-padding: 75px;
+padding: 75px 90px;
 float: left;
 margin: 5px;
 margin-left: 1.54%;   /* 20/1292= .015479 */
