changed somethings around in work

--- a/css/screen.css
+++ b/css/screen.css
@@ -144,7 +144,7 @@ display: block;
 /*left: 0px;  */
 position: relative;
 float: left;
-width: 100%;     /*308 / 1292 = .23839  */
+width: 19.97%;     /*258 / 1292 = .19969  */
 /* margin: 200px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
 /*background-color: #D0C8B4;
@@ -273,6 +273,15 @@ margin-top:  4.14%; /* 53.5/1292 = .0414 */
 /*  margin: 170px 10px 0px 0px;  */
 }
 
+div#work-content {
+/* position: relative;  */
+float: left;
+/*width: 53.87%;   696 / 1292 = .53869  */
+background-color: red; 
+margin-top:  4.14%; /* 53.5/1292 = .0414 */
+/*  margin: 170px 10px 0px 0px;  */
+}
+
 div#short-print, div#short-digital {
 display: block;
 position: relative;
@@ -319,7 +328,14 @@ font-weight: bold;
 div#short-digital img {
 position: relative;
 float: left;
+}
 
+div#work-print, div#work-digital {
+display: block;
+position: relative;
+float: left;
+width: 50%;  /*  492/1292= .3808    math is too short, actual percentage is guesstimate*/
+padding-bottom:   4.14%; /* 53.5/1292 = .0414 */
 }
 
 /*  Footer   */
