--- a/css/screen.css
+++ b/css/screen.css
@@ -50,13 +50,13 @@ div#page {
 margin: auto;
 padding: 0 1em;
 max-width: 80.75em; /* 1292 / 16px= 80.75%*/
-background: yellow;
+/*background: yellow; */
 }
 
 /* Header */
 
 div#topblock {
-background: orange;
+background: grey;
 }
 
 div#header {
@@ -64,7 +64,7 @@ display: block;
 float: left;
 width:  38.08%;  /*   492 / 1292 = .3808 */
 /* margin-left:  12.69%;    /*    164 / 1292= .1269    */
-background: red;
+/* background: red; */
 }
 
 
@@ -230,7 +230,7 @@ padding: 75px;
 float: left;
 margin: 5px;
 margin-left: 1.54%;   /* 20/1292= .015479 */
-border-radius: 15px;
+border-radius: 15 px;
 
 }
 
@@ -251,6 +251,7 @@ float: left;
 div#big-blurb {
 display: inline;
 float: left;
+margin-right: 130px;
 /*padding: 20px 400px 0px 80px; */
 }
 
@@ -276,10 +277,15 @@ margin-top:  4.14%; /* 53.5/1292 = .0414 */
 div#work-content {
 /* position: relative;  */
 float: left;
-/*width: 53.87%;   696 / 1292 = .53869  */
-background-color: red; 
+width: 78%; /*53.87%;   696 / 1292 = .53869  */
 margin-top:  4.14%; /* 53.5/1292 = .0414 */
 /*  margin: 170px 10px 0px 0px;  */
+}
+
+div#work-content h2{
+font-size: 3em;
+color: grey;
+font-family: Impact, sans-serif;
 }
 
 div#short-print, div#short-digital {
@@ -344,12 +350,17 @@ div#footer {
 float: left; 
 position: relative;
 z-index: 9999;
-background: green;
+background: grey;
 width: 100%;
 padding: 20px 0px 100px 0px;
 margin-top:  4.14%; /* 53.5/1292 = .0414 */
 }
 
+div#footer p {
+text-align: right;
+padding-right: 30px;
+color: white;
+}
 
 
 /* style for previous content
