--- a/css/screen.css
+++ b/css/screen.css
@@ -267,7 +267,7 @@ margin-right: 400px;
 
 div#big-blurb p {
 font-size: 3em;  
-font-family: "Arial Black", "Myriad Pro", Arial, serif;
+font-family: "Myriad Pro", Arial, serif;
 color: #7E92A9;
 font-weight: bold;
   /*margin-left:  12.69%;      164 / 1292= .1269    */
