--- a/css/screen.css
+++ b/css/screen.css
@@ -61,14 +61,6 @@ padding: 10px 0px 0px 0px;
 width: 100%;
 }
 
- {
-float: left; 
-position: relative;
-z-index: 9999;
-
-}
-
-
 
 div#header {
 display: block;
@@ -96,7 +88,7 @@ float: right;
 }
 
 ul#navigation li a{
-font-family: Georgia, serif;
+font-family: Signika, Georgia, serif;
 /*font-weight: bold;  */
 font-size: 1.1em;
 color: #fff;
