--- a/css/screen.css
+++ b/css/screen.css
@@ -262,7 +262,8 @@ float: left;
 
 /* Introductory Large text */
 div#big-blurb {
-display: inline;
+display: block;
+width: 100%;
 float: left;
 margin-right: 400px;
 
@@ -402,12 +403,14 @@ div#general {
 margin-left: 35%;
 background: rgb (197, 214, 215);
 background: rgba(197, 214, 215, 0.2);
-border-radius: 15px;
+border-top-right-radius: 15px;
+border-bottom-right-radius: 15px;
+border-left: 30px solid #C5D6D7;
 }
 
 div#general p {
 font-family: "Varela", Arial, sans-serif;
-margin: 2em 4em;
+margin: 2em 2.5em;
 }
 
 div#general h3 {
